# neutron-rich-bmm

./: .gitignore  404.html  FRG_Inclusion.ipynb  Gorda_pQCD_gsum.ipynb  Pressure_Mixing_GP.ipynb  Pressure_Mixing_cs2.ipynb  README.md  index.html  mkdocs.yml  neutron-rich-bmm_bandsdk.md  neutron-rich-bmm_sdkrules.md  objects.inv  pyproject.toml  requirements.txt  setup.py  sitemap.xml  subplot_p_cs2.eps  subplot_p_cs2.ps  sympy_cs2.py
.github/workflows/: ci.yml
Mathematica codes/: pqcd_dp_new.nb
api/: index.html
authors/: index.html
data/: README.md  contour_scaled.csv  frg_data_huth.csv  frg_data_pressure.csv  hic_data_huth.csv
data/eos_data/: correlated_training_data_20n0.npz  (+13 more)
docs/: api.md  authors.md  index.md  installation.md
installation/: index.html
notebooks/: BMM_GP_NSM-Matern.ipynb  Chiral_Cutoff_Comparisons.ipynb  Cov_matrix_by_hand_old.ipynb  Digitized_Plot_Analysis.ipynb  EOS_ChEFT.ipynb  Kernel_hyperprior_estimation.ipynb  MR_Curves.ipynb  NSM_Changepoint.ipynb  NSM_EOS_ChEFT.ipynb  Neutron_Star_Properties.ipynb  Pointwise_BMM.ipynb  TOV_Changepoint.ipynb  TOV_calculations.ipynb  ToyGPs.ipynb  Toy_GP_ANM.ipynb  Toy_GP_PNM.ipynb  Toy_GP_SNM.ipynb  model_mixing.ipynb  pQCD_EOS.ipynb  pQCD_EOS_NSM.ipynb
overview/: index.html
search/: search_index.json
src/: __init__.py  chiral.py  chiral_model.py  custom_kernels.py  data_utils.py  derivatives_new.py  eos_utils.py  gorda_model.py  gp_utils.py  mean_utils.py  pqcd.py  pqcd_model.py  pqcd_reworked.py  scripts.py  tov_utils.py  truncation_error.py  truncation_error_dens.py  utils.py
(+17 files in other folders)
